--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -87,12 +87,12 @@
 /* DIRECTION CONTROLS (NEXT / PREV) */
 
 .bx-wrapper .bx-prev {
-	left: -40px;
+	/*left: -6%;*/
 	background: url(images/controls.png) no-repeat 0 -32px;
 }
 
 .bx-wrapper .bx-next {
-	right: -30px;
+	right: 10px;
 	background: url(images/controls.png) no-repeat -43px -32px;
 }
 
